# private-ansible-example

./: LICENSE  README.md  ansible.cfg  ask-vault-pass.sh  pyproject.toml  setup.yml
group_vars/all/: vars.yml  vault.yml
roles/fabricenv/tasks/: main.yml
roles/fabricenv/templates/: activate.sh  pyproject.toml
roles/gpgkey/tasks/: main.yml
roles/gpgkey/templates/: private.key
roles/sshkey/tasks/: main.yml
roles/sshkey/templates/: id_ed25519  id_ed25519.pub  id_rsa  id_rsa.pub
roles/zsh/tasks/: main.yml
roles/zsh/templates/: zshrc
