[tool.poetry]
name = "private-ansible"
version = "0.1.0"
description = ""
authors = ["You <someone@thorgate.eu>"]

[tool.poetry.dependencies]
python = "^3.8"
tg-bw-helper = "^1.0.1"
ansible = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
