[tool.poetry]
name = "fabric-environment"
version = "0.1.0"
description = ""
authors = ["Sergey Kovalskiy <sergey@thorgate.eu>"]

[tool.poetry.dependencies]
python = "2.7.*"
tg-hammer = "0.6.8"
pip = "19.3.1"
pyyaml = "*"
boto3 = "*"
Django = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
